fix some stuff